add workouts and progresslogs collections, google oauth and unit tests
